<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">

    <android.support.v7.widget.RecyclerView
        android:id="@+id/list_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/bottom_layout"
        android:layout_alignParentTop="true"
        android:background="@android:color/transparent"
        android:orientation="vertical"
        android:overScrollMode="never"
        app:layoutManager="android.support.v7.widget.LinearLayoutManager"
        tools:listitem="@layout/item_rest_client_list" />

    <RelativeLayout
        android:id="@+id/bottom_layout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/db_viewer_bottom_height"
        android:layout_alignParentBottom="true"
        android:background="@color/db_viewer_bottom_bg">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/global_headers_textview"
                style="@style/DbViewerIcon"
                android:text="@string/action_headers" />

            <View style="@style/DbViewerDelimiter" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/run_all_textview"
                style="@style/DbViewerIcon"
                android:text="@string/action_run_all_api_call" />

            <View style="@style/DbViewerDelimiter" />

            <TextView
                android:id="@+id/close_textview"
                style="@style/DbViewerIcon"
                android:text="@string/action_close" />

        </LinearLayout>

    </RelativeLayout>

</RelativeLayout>