<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:weightSum="1">

    <LinearLayout
        android:id="@+id/content_layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:baselineAligned="false"
        android:minHeight="40dp"
        android:orientation="vertical" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:gravity="right"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/add_textview"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginRight="12dp"
            android:background="@drawable/semi_drawable"
            android:gravity="center"
            android:minHeight="40dp"
            android:paddingLeft="12dp"
            android:paddingRight="12dp"
            android:text="@string/action_add_header"
            android:textAllCaps="true"
            android:textColor="@color/dialog_title"
            android:textSize="@dimen/dialog_list_item_name"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/cancel_textview"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginRight="12dp"
            android:background="@drawable/semi_drawable"
            android:gravity="center"
            android:minHeight="40dp"
            android:paddingLeft="12dp"
            android:paddingRight="12dp"
            android:text="@string/action_cancel"
            android:textAllCaps="true"
            android:textColor="@color/dialog_title"
            android:textSize="@dimen/dialog_list_item_name"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/save_textview"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@drawable/semi_drawable"
            android:gravity="center"
            android:minHeight="40dp"
            android:paddingLeft="12dp"
            android:paddingRight="12dp"
            android:text="@string/action_save"
            android:textAllCaps="true"
            android:textColor="@color/dialog_title"
            android:textSize="@dimen/dialog_list_item_name"
            android:textStyle="bold" />

    </LinearLayout>

</LinearLayout>