<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/db_viewer_row_item_selector"
    android:minHeight="@dimen/dialog_item_height"
    android:orientation="vertical"
    android:paddingStart="10dp"
    android:paddingLeft="10dp"
    android:paddingTop="12dp"
    android:paddingEnd="10dp"
    android:paddingRight="10dp"
    android:paddingBottom="12dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="1"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/url_textview"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|left"
            android:lineSpacingExtra="@dimen/line_spacing"
            android:text="https://www.google.sk/://www.google.sk/://www.google.sk/"
            android:textColor="@color/dialog_title"
            android:textSize="@dimen/dialog_list_item_name"
            android:textStyle="bold" />

        <FrameLayout
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:layout_gravity="top|center_horizontal"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp">

            <ProgressBar
                android:id="@+id/progress_bar"
                android:layout_width="24dp"
                android:layout_gravity="center"
                android:layout_height="24dp"
                tools:visibility="invisible" />

            <TextView
                android:id="@+id/check_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:shadowColor="#000000"
                android:shadowDx="1"
                android:shadowDy="1"
                android:shadowRadius="1"
                android:text="@string/rest_finish"
                android:textColor="@color/green"
                android:textSize="@dimen/font_larger"
                android:textStyle="bold" />

        </FrameLayout>

        <TextView
            android:id="@+id/type_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top|left"
            android:background="@drawable/rest_get_drawable"
            android:gravity="center"
            android:minWidth="60dp"
            android:padding="4dp"
            android:shadowColor="#000000"
            android:shadowDx="1"
            android:shadowDy="1"
            android:shadowRadius="1"
            android:text="GET"
            android:textColor="@android:color/white"
            android:textSize="@dimen/dialog_list_item_name"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginTop="8dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="left|start|center_vertical"
            android:orientation="vertical">

            <TextView
                android:id="@+id/response_code_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:lineSpacingExtra="@dimen/line_spacing"
                android:textColor="@color/dialog_title"
                android:textSize="@dimen/dialog_list_item_name"
                android:textStyle="bold"
                tools:text="@string/response_code" />

            <TextView
                android:id="@+id/response_length_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:lineSpacingExtra="@dimen/line_spacing"
                android:textColor="@color/dialog_title"
                android:textSize="@dimen/dialog_list_item_name_small"
                android:textStyle="normal"
                tools:text="@string/response_length" />

            <TextView
                android:id="@+id/response_time_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:lineSpacingExtra="@dimen/line_spacing"
                android:textColor="@color/dialog_title"
                android:textSize="@dimen/dialog_list_item_name_small"
                android:textStyle="normal"
                tools:text="@string/response_time" />

        </LinearLayout>

        <TextView
            android:id="@+id/run_call_textview"
            style="@style/BtnCallIcon"
            android:shadowColor="#000000"
            android:shadowDx="1"
            android:shadowDy="1"
            android:shadowRadius="1" />

    </LinearLayout>

    <TextView
        android:id="@+id/response_headers_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/btn_detail_drawable"
        android:lineSpacingExtra="@dimen/line_spacing"
        android:paddingLeft="12dp"
        android:paddingTop="4dp"
        android:paddingRight="12dp"
        android:paddingBottom="4dp"
        android:textColor="@color/dialog_title"
        android:textSize="@dimen/font_small"
        android:textStyle="normal"
        android:visibility="gone"
        tools:text="@string/response_length"
        tools:visibility="visible" />

    <LinearLayout
        android:id="@+id/response_output_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="12dp"
        android:background="@drawable/btn_detail_drawable"
        android:gravity="center"
        android:minHeight="40dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/more_output_textview"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="12dp"
            android:layout_weight="1"
            android:gravity="left|center_vertical"
            android:text="@string/rest_display_output"
            android:textColor="@color/dialog_desc"
            android:textSize="@dimen/dialog_list_item_name"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginRight="12dp"
            android:gravity="center"
            android:rotation="-90"
            android:text="@string/icon_down"
            android:textColor="@color/dialog_desc"
            android:textSize="@dimen/font_larger"
            android:textStyle="bold" />

    </LinearLayout>

</LinearLayout>